--- a/index.html
+++ b/index.html
@@ -40,8 +40,15 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="https://study.luyaoguagua.top/bio/" target="_blank" rel="noopener">生物</a></li>
-                                                                <li><a href="https://study.luyaoguagua.top/math/" target="_blank" rel="noopener">数学</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver2.0.pdf" target="_blank" rel="noopener">修改版2.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver3.0.pdf" target="_blank" rel="noopener">修改版3.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver4.0.pdf" target="_blank" rel="noopener">修改版4.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver5.0.pdf" target="_blank" rel="noopener">修改版5.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver6.0.pdf" target="_blank" rel="noopener">修改版6.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver7.0.pdf" target="_blank" rel="noopener">修改版7.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver8.0.pdf" target="_blank" rel="noopener">修改版8.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver9.0.pdf" target="_blank" rel="noopener">修改版9.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver10.0.pdf" target="_blank" rel="noopener">修改版10.0</a></li>
 
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
