--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 								<li><a href="https://mylog.luyaoguagua.top/gua-ver7.0.pdf" target="_blank" rel="noopener">修改版7.0</a></li>
 								<li><a href="https://mylog.luyaoguagua.top/gua-ver8.0.pdf" target="_blank" rel="noopener">修改版8.0</a></li>
 								<li><a href="https://mylog.luyaoguagua.top/gua-ver9.0.pdf" target="_blank" rel="noopener">修改版9.0</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/gua-ver10.0.pdf" target="_blank" rel="noopener">修改版10.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver10.0.pdf" target="_blank" rel="noopener">修改版10</a></li>
 								<li><a href="https://mylog.luyaoguagua.top/final1.pdf" target="_blank" rel="noopener">完成稿1</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/final2.pdf" target="_blank" rel="noopener">完成稿2</a></li>
 
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
