--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 								<li><a href="https://mylog.luyaoguagua.top/gua-ver10.0.pdf" target="_blank" rel="noopener">修改版10</a></li>
 								<li><a href="https://mylog.luyaoguagua.top/final1.pdf" target="_blank" rel="noopener">完成稿1</a></li>
 								<li><a href="https://mylog.luyaoguagua.top/final2.pdf" target="_blank" rel="noopener">完成稿2</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/certificated.pdf" target="_blank" rel="noopener">签名版</a></li>
 
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
