--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@ fetch('https://stapi.luyaoguagua.top')
 						</div>
 						<nav>
 							<ul>
-								<li><a href="https://mylog.luyaoguagua.top/gua-ver2.0.pdf" target="_blank" rel="noopener">修改版2.0</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/gua-ver3.0.pdf" target="_blank" rel="noopener">修改版3.0</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/gua-ver4.0.pdf" target="_blank" rel="noopener">修改版4.0</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/gua-ver5.0.pdf" target="_blank" rel="noopener">修改版5.0</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/gua-ver6.0.pdf" target="_blank" rel="noopener">修改版6.0</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/gua-ver7.0.pdf" target="_blank" rel="noopener">修改版7.0</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/gua-ver8.0.pdf" target="_blank" rel="noopener">修改版8.0</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/gua-ver9.0.pdf" target="_blank" rel="noopener">修改版9.0</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/gua-ver10.0.pdf" target="_blank" rel="noopener">修改版10</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/final1.pdf" target="_blank" rel="noopener">完成稿1</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/final2.pdf" target="_blank" rel="noopener">完成稿2</a></li>
-								<li><a href="https://mylog.luyaoguagua.top/certificated.pdf" target="_blank" rel="noopener">签名版</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver2.0.pdf" target="_blank" rel="noopener">修改2.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver3.0.pdf" target="_blank" rel="noopener">修改3.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver4.0.pdf" target="_blank" rel="noopener">修改4.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver5.0.pdf" target="_blank" rel="noopener">修改5.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver6.0.pdf" target="_blank" rel="noopener">修改6.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver7.0.pdf" target="_blank" rel="noopener">修改7.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver8.0.pdf" target="_blank" rel="noopener">修改8.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver9.0.pdf" target="_blank" rel="noopener">修改9.0</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/gua-ver10.0.pdf" target="_blank" rel="noopener">修改10</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/final1.pdf" target="_blank" rel="noopener">完成1</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/final2.pdf" target="_blank" rel="noopener">完成2</a></li>
+								<li><a href="https://mylog.luyaoguagua.top/certificated.pdf" target="_blank" rel="noopener">瓜签名</a></li>
 
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
