--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ fetch('https://stapi.luyaoguagua.top')
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">2020<a href="https://www.luyaoguagua.top/" target="_blank" rel="noopener">陆尧瓜瓜</a> 版权所有
+						<p class="copyright">2020<a href="https://gua.luyaoguagua.top/" target="_blank" rel="noopener">陆尧瓜瓜</a> 版权所有
 
 
 					</footer>
