--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@ fetch('https://stapi.luyaoguagua.top')
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">2020<a href="https://gua.luyaoguagua.top/" target="_blank" rel="noopener">陆尧瓜瓜</a> 版权所有
-
-
+						<p class="copyright">2020<a href="https://gua.luyaoguagua.top/" target="_blank">陆尧瓜瓜</a> 版权所有 <a href="https://beian.miit.gov.cn/"; target=_blank>苏ICP备2022028369号</a>
 					</footer>
 
 			</div>
